[add] fourth try

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="app">
 
   <div>
-    <h3 class="risposta">{{risultato}}</h3>
+    <h3 class="result">{{result}}</h3>
   </div>
   
   <script src="assets/main.js"></script>
